fix: add post for add public path
